# 2048_cpp

./: .gitignore  2048_cpp.sln  2048_cpp.vcxproj  2048_cpp.vcxproj.filters  CMakeLists.txt  README.md  gameBoard.cpp  gameBoard.h  main.cpp  tile.cpp  tile.h
Debug/: 2048_cpp.exe.recipe  2048_cpp.ilk  2048_cpp.vcxproj.FileListAbsolute.txt  vc143.idb
Debug/2048_cpp.tlog/: 2048_cpp.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/: 2048_cpp.exe.recipe  2048_cpp.iobj  2048_cpp.ipdb  2048_cpp.vcxproj.FileListAbsolute.txt
Release/2048_cpp.tlog/: 2048_cpp.lastbuildstate  2048_cpp.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
src/: RoundedRectangleShape.cpp  RoundedRectangleShape.hpp  gameBoard.cpp  main.cpp  tile.cpp  tile.h
x64/Debug/: 2048_cpp.exe.recipe  2048_cpp.ilk  2048_cpp.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/2048_cpp.tlog/: 2048_cpp.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
